--- a/App_GlobalResources/JSConsts.fr.resx
+++ b/App_GlobalResources/JSConsts.fr.resx
@@ -213,9 +213,6 @@
   <data name="TEXT_ADD_SUBSCRIPTION" xml:space="preserve">
     <value>Ajouter un abonnement</value>
   </data>
-  <data name="TEXT_ADD_SUBSCRIPTION1" xml:space="preserve">
-    <value>Ajouter un abonnement</value>
-  </data>
   <data name="TEXT_ADD_VALUE" xml:space="preserve">
     <value>Ajouter une valeur</value>
   </data>
@@ -760,7 +757,7 @@
     <value>Supprimer l’abonnement groupé</value>
   </data>
   <data name="TEXT_REMOVE_GRPSUBMEM_ACCOUNTS" xml:space="preserve">
-    <value> Sélectionnez les comptes à supprimer de la liste</value>
+    <value>Sélectionnez les comptes à supprimer de la liste</value>
   </data>
   <data name="TEXT_REMOVE_RELSHIP" xml:space="preserve">
     <value>Êtes-vous sûr de vouloir supprimer la/les relations sélectionnées ?</value>
@@ -925,13 +922,7 @@
     <value>Relations pour :</value>
   </data>
   <data name="TITLE_REMOVE_RELATIONSHIP" xml:space="preserve">
-    <value>Remove Relationship</value>
-  </data>
-  <data name="TEXT_FLS_ERROR_MESSAGE" xml:space="preserve">
-    <value>[FR]Error Message:&lt;br/&gt;[ErrorMessage]</value>
-  </data>
-  <data name="TEXT_FLS_NO_ERROR_MESSAGE" xml:space="preserve">
-    <value>[FR]No error message to report.</value>
+    <value>[FR]Remove Relationship</value>
   </data>
   <data name="TEXT_ACTIVATE_DEACTIVATE" xml:space="preserve">
     <value>[FR]Activate/Deactivate</value>
@@ -973,37 +964,25 @@
     <value>[FR]Help:  Parameter Table</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_ITEMS_TO_AGGREGATE" xml:space="preserve">
-    <value>[FR] For example, suppose the Decision Type is \"Use a special rate if the number of minutes of usage is over 500\". The settings might include \"500\" and the \"special rate\" to apply.</value>
+    <value>[FR]For example, suppose the Decision Type is \"Use a special rate if the number of minutes of usage is over 500\". The settings might include \"500\" and the \"special rate\" to apply.</value>
   </data>
   <data name="TITLE_AMPWIZARD_HELP_AGGREGATION_METHOD" xml:space="preserve">
-    <value>[FR] Help:  Aggregation Method</value>
+    <value>[FR]Help:  Aggregation Method</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD" xml:space="preserve">
-    <value>[FR] Decisions are used when a monetary charge amount cannot be calculated by looking at a single record. Instead, many usage records must be examined and a total must be the number of events, units of usage, or charge amounts. The total, or aggregate, is then used to help determine the charge amount.</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_ADD_UP_MONETARY_CHARGE" xml:space="preserve">
-    <value>[FR] Example: \"Apply a discount if there's over $100 in charges.\"</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_ADD_UP_UNIT_OF_USAGE" xml:space="preserve">
-    <value>[FR] Example: \"Use a special rate if over 1,000 minutes.\"</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_COUNT_NUMBER_OF_EVENTS" xml:space="preserve">
-    <value>[FR] Example: \"Apply a discount if over 100 calls were made.\"</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_AGGREGATION_METHOD_FROM_PARAMETER_TABLE" xml:space="preserve">
-    <value>[FR] Usage is aggregated based on the value set in the parameter table.</value>
+    <value>[FR]Decisions are used when a monetary charge amount cannot be calculated by looking at a single record. Instead, many usage records must be examined and a total must be the number of events, units of usage, or charge amounts. The total, or aggregate, is then used to help determine the charge amount.</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_DECISION_PRIORITY" xml:space="preserve">
-    <value>[FR] Suppose you have two Decisions that want to consider the same usage record and the Decisions are configured to consume the usage records.  Which Decision is processed first?  This is determined by the Decisions' priority levels.  The lower the Numeric Priority Level, the earlier the Decision is executed.  Decisions with the same priority level are executed in a nondeterministic order.  On this page, you can change the priority level of the Decision Type you are configuring now.</value>
+    <value>[FR]Suppose you have two Decisions that want to consider the same usage record and the Decisions are configured to consume the usage records.  Which Decision is processed first?  This is determined by the Decisions' priority levels.  The lower the Numeric Priority Level, the earlier the Decision is executed.  Decisions with the same priority level are executed in a nondeterministic order.  On this page, you can change the priority level of the Decision Type you are configuring now.</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_USAGE_OVERLAP" xml:space="preserve">
-    <value>[FR] For example, suppose you have one Decision Type that totals \"minutes\" and \"all minutes &lt; 1000 are free\".  And you have a second Decision Type that totals \"minutes\", but we only want to count minutes that were not part of the 1000.  We want the second Decision Type to consider only minutes that were not consumed by the first Decision Type; therefore, the Decision Domain for both Decision Types should be set to 'Ratable'.</value>
+    <value>[FR]For example, suppose you have one Decision Type that totals \"minutes\" and \"all minutes &lt; 1000 are free\".  And you have a second Decision Type that totals \"minutes\", but we only want to count minutes that were not part of the 1000.  We want the second Decision Type to consider only minutes that were not consumed by the first Decision Type; therefore, the Decision Domain for both Decision Types should be set to 'Ratable'.</value>
   </data>
   <data name="TITLE_AMPWIZARD_HELP_DECISION_PRIORITY" xml:space="preserve">
-    <value>[FR] Help:  Decision Priority</value>
+    <value>[FR]Help:  Decision Priority</value>
   </data>
   <data name="TITLE_AMPWIZARD_HELP_USAGE_OVERLAP" xml:space="preserve">
-    <value>[FR] Help:  Decision Domain</value>
+    <value>[FR]Help:  Decision Domain</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_AMOUNT_CHAIN_GROUP" xml:space="preserve">
     <value>[FR]You need to select an Amount Chain Group so that the Decision Type knows what to count and how to recalculate related values.  A sample Amount Chain might have four related fields in a Product View:  \"the number of minutes used\", \"the rate per minute\", \"the charge amount\", and \"the tax on the charge amount\".</value>
@@ -1025,12 +1004,6 @@
   </data>
   <data name="TEXT_AMPWIZARD_MORE_DECISION_RANGE_PRORATION" xml:space="preserve">
     <value>[FR]The proration factor to apply to the range is determined by comparing a Decision Type instance's intended start and end dates with its actual start and end dates.  If a Decision is intended to include 30 days of usage but in actuality only covers 15 days (e.g., the subscription starts or ends mid-period), the proration factor would be 15/30, or 0.5.  If the end of range is 500 prior to proration, it becomes 250 after applying the proration factor.&lt;br/&gt;&lt;br/&gt;Prorating on activation and termination independently allows the user control of whether each will serve to reduce the proration factor.  If a Decision starts 15 days into the cycle but proration on activation is NOT chosen, those 15 days will NOT serve to reduce the proration factor.</value>
-  </data>
-  <data name="TITLE_AMPWIZARD_HELP_DECISION_RANGE_PRORATION" xml:space="preserve">
-    <value>[FR]</value>
-  </data>
-  <data name="TITLE_AMPWIZARD_HELP_DECISION_RANGE" xml:space="preserve">
-    <value>[FR]</value>
   </data>
   <data name="TITLE_AMPWIZARD_HELP_RESTART_RANGE" xml:space="preserve">
     <value>[FR]Help: Restart Range</value>
@@ -1056,18 +1029,6 @@
   <data name="TEXT_AMPWIZARD_HELP_INCREMENTAL_OR_BULK" xml:space="preserve">
     <value>[FR]&lt;i&gt;Incremental&lt;/i&gt; means that the Decision should take a record, add it to the total, and then if the total is within the range, perform an action.  &lt;i&gt;Bulk&lt;/i&gt; means that the Decision should total &lt;u&gt;ALL&lt;/u&gt; the records, and then if the total falls within the range, apply the action to &lt;u&gt;ALL&lt;/u&gt; the records.</value>
   </data>
-  <data name="TITLE_AMPWIZARD_HELP_MULTIBUCKET" xml:space="preserve">
-    <value>[FR]Help: Multi-bucket</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_MULTIBUCKET" xml:space="preserve">
-    <value>[FR]Act on each individual record.  Usage may have different prices  which are determined by the bucket into which they fall.</value>
-  </data>
-  <data name="TITLE_AMPWIZARD_HELP_SINGLEBUCKET" xml:space="preserve">
-    <value>[FR]Help: Single-bucket</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_SINGLEBUCKET" xml:space="preserve">
-    <value>[FR]Act on all the records together.  All usage has same price which is determined by total volume.</value>
-  </data>
   <data name="TITLE_AMPWIZARD_HELP_UNIT_RATE" xml:space="preserve">
     <value>[FR]Help:  New Unit Rate</value>
   </data>
@@ -1092,12 +1053,6 @@
   <data name="TEXT_AMPWIZARD_HELP_GENERATED_CHARGE" xml:space="preserve">
     <value>[FR]Choose this option to have the Decision Type generate a new Charge or Credit.  You will define the Charge/Credit on the next set of screens.</value>
   </data>
-  <data name="TITLE_AMPWIZARD_HELP_NO_CHARGE" xml:space="preserve">
-    <value>[FR] Help:  None</value>
-  </data>
-  <data name="TEXT_AMPWIZARD_HELP_NO_CHARGE" xml:space="preserve">
-    <value>[FR] Do not generate a charge for this decision</value>
-  </data>
   <data name="TITLE_AMPWIZARD_HELP_GENERATED_CHARGE_GRID" xml:space="preserve">
     <value>[FR]Help:  Generated Charges/Credits Grid</value>
   </data>
@@ -1106,9 +1061,6 @@
   </data>
   <data name="TEXT_AMPWIZARD_MORE_DECISION_CYCLE" xml:space="preserve">
     <value>[FR]For example, maybe the billing cycle is monthly, but you want to give a special rate if \"more than 1000 minutes are used in three months\". This is known as the Decision Cycle.</value>
-  </data>
-  <data name="TITLE_AMPWIZARD_HELP_MORE_DECISION_CYCLE" xml:space="preserve">
-    <value>[FR] Help: Decision Cycle</value>
   </data>
   <data name="TITLE_AMPWIZARD_ADD_MISC_ATTRIBUTE" xml:space="preserve">
     <value>[FR]Add Miscellaneous Attribute</value>
@@ -1121,6 +1073,15 @@
   </data>
   <data name="TEXT_AMPWIZARD_MORE_CHARGE_CREDIT_DIRECTIVE" xml:space="preserve">
     <value>[FR]There are three types of work that a directive can do as part of generating a charge or credit:&lt;br/&gt;- Table Inclusion - Join to a database table or view.  All fields from the selected row in the included table or view will be added as fields to the object in memory.&lt;br/&gt;- Field Population - Populate a field of the object in memory by evaluating an expression or by assigning a default value.&lt;br/&gt;- Procedure Execution - Execute an MVM procedure.  This provides a mechanism for doing anything that cannot be accomplished through table inclusion and field population.</value>
+  </data>
+  <data name="TEXT_FLS_ERROR_MESSAGE" xml:space="preserve">
+    <value>Error Message:&lt;br/&gt;[ErrorMessage]</value>
+  </data>
+  <data name="TEXT_FLS_NO_ERROR_MESSAGE" xml:space="preserve">
+    <value>No error message to report.</value>
+  </data>
+  <data name="TEXT_BACK" xml:space="preserve">
+    <value>Previous</value>
   </data>
   <data name="TEXT_AMPWIZARD_HELP_DIRECTIVES" xml:space="preserve">
     <value>[FR]This table shows what fields in the product view and t_acc_usage have Field Population directives defined for them. It's designed to help you see what fields still need to be set.</value>
@@ -1191,56 +1152,56 @@
   <data name="TEXT_AMPWIZARD_HELP_DIRECTIVE_FILTER" xml:space="preserve">
     <value>[FR]The Condition for Execution is a freeform MVM expression that is evaluated when the directive is about to be executed.  If the expression evaluates to 1, execution of the directive goes forth; if it evaluates to something other than 1, the directive is NOT executed.  This field applies to Table Inclusion, Field Population, and Procedure Execution.</value>
   </data>
-  <data name="ERROR_BILL_MESSAGE_DATES" xml:space="preserve">
-    <value>[FR]Error: End Date needs to be later than Start Date</value>
-  </data>
   <data name="ERROR_SUBSCRIPTION_STARTDATE_BIGGER_ENDDATE" xml:space="preserve">
     <value>La date de début ne peut être après la date de fin</value>
   </data>
   <data name="TEXT_HARD_CLOSED_INTERVAL_STATUS" xml:space="preserve">
-    <value>[FR] Hard Closed</value>
+    <value>[FR]Hard Closed</value>
   </data>
   <data name="TEXT_OPEN_INTERVAL_STATUS" xml:space="preserve">
-    <value>[FR] Open</value>
+    <value>[FR]Open</value>
   </data>
   <data name="TEXT_SOFT_CLOSED_INTERVAL_STATUS" xml:space="preserve">
-    <value>[FR] Soft Closed</value>
+    <value>[FR]Soft Closed</value>
   </data>
   <data name="TEXT_UNKNOWN_INTERVAL_STATUS" xml:space="preserve">
-    <value>[FR] Unknown</value>
+    <value>[FR]Unknown</value>
   </data>
   <data name="TEXT_PASSWORD_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] Passwords do not match.</value>
+    <value>[FR]Passwords do not match.</value>
   </data>
   <data name="TEXT_PHONE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] Enter a valid phone number. Format: 555-555-5555</value>
+    <value>[FR]Enter a valid phone number. Format: 555-555-5555</value>
   </data>
   <data name="TEXT_CREDITCARD_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] Credit card format is invalid</value>
+    <value>[FR]Credit card format is invalid</value>
   </data>
   <data name="TEXT_CREDITCARD_VERIFICATIONNO_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] CV Number is invalid</value>
+    <value>[FR]CV Number is invalid</value>
   </data>
   <data name="TEXT_SSN_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] SSN format: xxx-xx-xxxx</value>
+    <value>[FR]SSN format: xxx-xx-xxxx</value>
   </data>
   <data name="TEXT_ACCOUNTNO_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] Only numeric digits are allowed</value>
+    <value>[FR]Only numeric digits are allowed</value>
   </data>
   <data name="TEXT_ZIPCODE_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] Zipcode is invalid</value>
+    <value>[FR]Zipcode is invalid</value>
   </data>
   <data name="TEXT_MIDDLEINITIAL_VALIDATION_MESSAGE" xml:space="preserve">
-    <value>[FR] Middle initial is invalid</value>
+    <value>[FR]Middle initial is invalid</value>
+  </data>
+  <data name="TEXT_ACCOUNT_ACTIVITY" xml:space="preserve">
+    <value>Account Activity</value>
   </data>
   <data name="TEXT_RETRY_COLUMN" xml:space="preserve">
-    <value>[FR] Retry</value>
+    <value>[FR]Retry</value>
   </data>
   <data name="TEXT_REQUEST_SUBMITTED" xml:space="preserve">
-    <value>[FR] Resubmitted Request</value>
+    <value>[FR]Resubmitted Request</value>
   </data>
   <data name="TEXT_SELECT_PO_ERROR" xml:space="preserve">
-    <value>[FR]</value>
+    <value>[FR]Please select product offerings to be added</value>
   </data>
     <data name="TEXT_CONVERT" xml:space="preserve">
     <value>[FR]Convert</value>
@@ -1249,51 +1210,51 @@
     <value>[FR]Are you sure that you want to convert quote to subscriptions?</value>
   </data>
   <data name="ACCOUNT_PAYEE_SELF_TEXT" xml:space="preserve">
-    <value>[FR] This account pays for itself</value>
+    <value>[FR]This account pays for itself</value>
   </data>
   <data name="ACCOUNT_PAYEE_TEXT" xml:space="preserve">
-    <value>[FR] This account is paid for by</value>
+    <value>[FR]This account is paid for by</value>
   </data>
   <data name="ACCOUNT_STATUS_LABEL_TEXT" xml:space="preserve">
-    <value>[FR] Account Status</value>
+    <value>[FR]Account Status</value>
   </data>
   <data name="ACCOUNT_STATUS_TEXT" xml:space="preserve">
-    <value>[FR] Status</value>
+    <value>[FR]Status</value>
   </data>
   <data name="ACCOUNT_BALANCE_AS_OF_TEXT" xml:space="preserve">
     <value>[FR] as of</value>
   </data>
   <data name="ACCOUNT_BALANCE_TEXT" xml:space="preserve">
-    <value>[FR] Balance</value>
+    <value>[FR]Balance</value>
   </data>
   <data name="ACCOUNT_EDIT_INFO_TEXT" xml:space="preserve">
-    <value>[FR] Change</value>
+    <value>[FR]Change</value>
   </data>
   <data name="ACCOUNT_LTV_TEXT" xml:space="preserve">
-    <value>[FR] Ltv</value>
+    <value>[FR]Ltv</value>
   </data>
   <data name="ACCOUNT_MRR_TEXT" xml:space="preserve">
-    <value>[FR] MRR</value>
+    <value>[FR]MRR</value>
   </data>
   <data name="ACCOUNT_MRR_GRAPH_TEXT" xml:space="preserve">
-    <value>[FR] MRR</value>
+    <value>[FR]MRR</value>
   </data>
   <data name="ACCOUNT_INVOICE_GRAPH_TEXT" xml:space="preserve">
-    <value>[FR] Invoice</value>
+    <value>[FR]Invoice</value>
   </data>
   <data name="ACCOUNT_FAILED_TRANSACTIONS_TEXT" xml:space="preserve">
-    <value>[FR] Failed Transactions</value>
+    <value>[FR]Failed Transactions</value>
   </data>
   <data name="REPORTS_TREE_HEADER_DESCRIPTION" xml:space="preserve">
-    <value>[FR] Description</value>
+    <value>[FR]Description</value>
   </data>
   <data name="REPORTS_TREE_HEADER_NAME" xml:space="preserve">
-    <value>[FR] Name</value>
+    <value>[FR]Name</value>
   </data>
   <data name="REPORTS_TREE_NOT_APPLICABLE_TEXT" xml:space="preserve">
-    <value>[FR] N/A</value>
+    <value>[FR]N/A</value>
   </data>
   <data name="TEXT_ACCOUNT_TYPE" xml:space="preserve">
-    <value>{FR}Account Type</value>
+    <value>[FR]Account Type</value>
   </data>
 </root>
